In the column container, use the correct Flexbox property to center the items on the horizontal axis. In the .colItem class code the text-align property and center it.

--- a/Mimo_05_Flexbox/007_Style_a_Blog_with_FLexbox/style.css
+++ b/Mimo_05_Flexbox/007_Style_a_Blog_with_FLexbox/style.css
@@ -53,6 +53,7 @@ body {
     max-height: 250px;
     display: flex;
     flex-direction: column;
+    align-items: center;
   }
   
   .colItem {
@@ -60,6 +61,7 @@ body {
     margin: 8px;
     border: 2px solid #F0EEEE;
     border-radius: 2px;
+    text-align: center;
   }
   
   .navItem {
